fluxcd/infrastructure/configs/overlays/production/istio-policies/hyrule-castle/allow-webhook-apiserver.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-gitlab-certmanager-webhook-apiserver
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: webhook
      app.kubernetes.io/instance: gitlab
  action: ALLOW
  rules:
    - from:
        - source:
            notPrincipals:
              - cluster.local/ns/*/sa/*
      to:
        - operation:
            ports: ["443"]
